# checkpoint

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.jsonc
docs/: FAQ.md
example/: config.jsonc  index_bots.jsonc
html/: explainNoJs.html  index.html  index.min.html
src/: GlobalState.hpp  main.cpp
src/config/: Config.cpp  Config.hpp  ConfigRule.cpp  ConfigRule.hpp  ConfigTypes.hpp  IPRange.cpp  IPRange.hpp
src/core/: Challenge.cpp  Challenge.hpp  Crypto.cpp  Crypto.hpp  Db.cpp  Db.hpp  Handler.cpp  Handler.hpp  Token.cpp  Token.hpp
src/debug/: log.hpp
src/headers/: acceptLanguageHeader.hpp  authorization.hpp  cfHeader.hpp  gitProtocolHeader.hpp  setCookieHeader.hpp  wwwAuthenticateHeader.hpp  xforwardfor.hpp  xrealip.hpp
src/helpers/: FsUtils.cpp  FsUtils.hpp  RequestUtils.cpp  RequestUtils.hpp
src/logging/: TrafficLogger.cpp  TrafficLogger.hpp
